# SharedMemoryRingBuffer

./: CMakeLists.txt  meson.build
.github/workflows/: c-cpp.yml
include/: CMakeLists.txt  meson.build  ring-buffer.h
include/shmrb/: lock.h  ring-buffer.h
shmrb/: libshmrb-config.cmake
src/: CMakeLists.txt  lock.cpp  meson.build  ring-buffer.cpp
tests/: CMakeLists.txt  test-consumer.cpp  test-producer.cpp
